# genai-template

./: .env.example  .env.example.docker  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ollama  LICENSE  Makefile  README.md  docker-compose.yml  index.html  objects.inv  pyproject.toml
.github/workflows/: test-deploy.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
package/api/api/: index.html
package/api/api_route/: index.html
package/api/log_config/: index.html
package/evaluation/configs/config_baseline/: index.html
package/evaluation/configs/config_json/: index.html
package/evaluation/context/: index.html
package/evaluation/metrics/data_types/: index.html
package/evaluation/metrics/utils/: index.html
package/main_backend/: index.html
package/main_frontend/: index.html
package/ml/ai/: index.html
package/ml/llm/: index.html
package/pages/0_chat/: index.html
package/pages/1_embeddings/: index.html
package/pages/2_azure_rag/: index.html
package/pages/3_fastapi_azure_rag/: index.html
package/settings_env/: index.html
package/utils/: index.html
search/: search_index.json
src/: main_backend.py  main_frontend.py  settings_env.py  utils.py
src/api/: api.py  api_route.py  log_config.py
src/evaluation/: context.py  instructions.txt
src/evaluation/configs/: config_baseline.py  config_compare_prompts.yaml  config_json.py  config_json.yaml  config_simple.yaml  redteam_config.yaml
src/evaluation/data/: test_json.csv  test_simple.csv
src/evaluation/metrics/: data_types.py  utils.py
src/evaluation/metrics/information_extraction/: exact_match_json.py  missing_fields.py  similarity_json.py
src/evaluation/metrics/order_aware/: reciprocal_rank.py
src/evaluation/metrics/order_unaware/: f1_at_k.py  precision_at_k.py  recall_at_k.py
src/evaluation/metrics/ragas_metrics/: ragas_context_recall.py  (+8 more)
src/ml/: ai.py  llm.py
src/pages/: 0_chat.py  1_embeddings.py  2_azure_rag.py  3_fastapi_azure_rag.py
tests/: readme.txt  test_llm_endpoint.py  test_rag.py  test_settings.py
(+17 files in other folders)
